[workspace]
resolver = "2"
members = [
    "lib/bootstrap",
    "lib/events",
    "lib/meta",
    "lib/model",
    "lib/proc",

    "bin/bot",
    "bin/calendar",
    "bin/db",
    "bin/docker",
    "bin/executor",
    "bin/hooks",
    "bin/web",

    "arma/server",

    "utils/poll-runner",
    #"utils/reachout",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
missing_const_for_fn = "allow"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
arma-rs = { version = "1.11.14", features = ["uuid", "serde_json"] }
async-trait = "0.1.89"
axum = "0.8.4"
# nats = { version = "0.25.0" }
nats = { git = "https://github.com/nats-io/nats.rs" }
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
rsa = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", default-features = false, features = ["rustls_backend"] }
sqlx = { version = "0.8.6" }
strum = "0.27.2"
time = "0.3.44"
tokio = "1.47.1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
uuid = "1.18.1"
