[package]
name = "synixe-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-events = { path = "../synixe-events" }
synixe-meta = { path = "../synixe-meta" }

reqwest = { version = "0.11.12", features = ["json"] }
serenity = { workspace = true, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
