[package]
name = "synixe-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../bootstrap", features = ["nats"] }
synixe-events = { path = "../synixe-events" }
synixe-meta = { path = "../synixe-meta" }
synixe-proc = { path = "../synixe-proc" }

log = { workspace = true }
nats = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serenity = { workspace = true, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
tokio = { version = "1.21.2", features = ["full"] }
