[package]
name = "synixe-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../bootstrap", features = ["nats", "sqlx"] }
synixe-events = { path = "../synixe-events" }

anyhow = "1.0.65"
async-trait = { workspace = true }
log = { workspace = true }
nats = { workspace = true }
opentelemetry = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "offline", "chrono"] }
tokio = { version = "1.21.2", features = ["full"] }
