[package]
name = "synixe-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../bootstrap", features = ["nats", "sqlx"] }
synixe-events = { path = "../synixe-events" }
synixe-meta = { path = "../synixe-meta" }
synixe-model = { path = "../synixe-model", features = ["sqlx"] }

anyhow = "1.0.65"
async-trait = { workspace = true }
log = { workspace = true }
nats = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { version = "0.11.12", features = ["json"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "offline", "chrono", "uuid", "json"] }
tokio = { version = "1.21.2", features = ["full"] }
serenity = { workspace = true, features = [ "builder" ] }
