[package]
name = "synixe-events"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-proc = { path = "../synixe-proc" }

async-trait = "0.1.57"
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.85"
serenity = { workspace = true, feature = ["utils"] }
