[package]
name = "synixe-events"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-proc = { path = "../synixe-proc" }

anyhow = "1.0.65"
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
nats = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.85"
serenity = { workspace = true, features = ["utils", "builder"] }
