[package]
name = "synixe-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-events = { path = "../synixe-events" }
synixe-meta = { path = "../synixe-meta" }

nats = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { version = "0.11.12" }
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-simple-scheduler = "0.1.1"
