[package]
name = "synixe-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../bootstrap", features = ["nats"] }
synixe-events = { path = "../synixe-events" }
synixe-meta = { path = "../synixe-meta" }

log = { workspace = true }
nats = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.2", features = ["full"] }
tokio-simple-scheduler = "0.1.1"

# recruiting
roux = { git = "https://github.com/halcyonnouveau/roux", rev = "82811bd63d6db2ce437db1335bce0ebbeb33f25c"}
rust-embed="6.4.1"
scraper = "0.13.0"
