[package]
name = "synixe-arma-server"
version = "0.2.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "crate_server"
crate-type = ["cdylib"]

[dependencies]
bootstrap = { path = "../../lib/bootstrap", features = ["nats"] }
synixe-events = { path = "../../lib/events" }
synixe-meta = { path = "../../lib/meta" }
synixe-model = { path = "../../lib/model", features = ["gear", "arma-rs"] }
synixe-proc = { path = "../../lib/proc" }

anyhow = { workspace = true }
arma-rs = { workspace = true }
async-trait = { workspace = true }
log = "0.4.27"
nats = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }

[dev-dependencies]
nats = { workspace = true }
rand = "0.9.1"
