[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-nats =  { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["postgres"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true, optional = true }

[features]
default = []
