[package]
name = "synixe-events"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-proc = { path = "../proc" }
synixe-model = { path = "../model", features = ["mission-schedule", "certifications", "gear"] }

anyhow = "1.0.66"
async-trait = { workspace = true }
time = { workspace = true, features = ["serde-well-known"] }
nats = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.89"
serenity = { workspace = true, features = ["utils", "builder"] }
uuid = { workspace = true, features = ["serde"] }
