[package]
name = "synixe-events"
version = "0.1.0"
edition = "2021"

[dependencies]
synixe-proc = { path = "../proc" }
synixe-model = { path = "../model", features = ["mission-schedule", "certifications", "gear", "garage"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
nats = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.91"
serenity = { workspace = true, features = ["utils", "builder"] }
time = { workspace = true, features = ["serde-well-known"] }
uuid = { workspace = true, features = ["serde"] }
