[package]
name = "synixe-events"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
synixe-model = { path = "../model", features = ["campaigns", "certifications", "gear", "garage", "mission-schedule"] }
synixe-meta = { path = "../meta" }
synixe-proc = { path = "../proc" }

anyhow = { workspace = true }
async-trait = { workspace = true }
nats = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serenity = { workspace = true, features = ["utils", "builder"] }
time = { workspace = true, features = ["serde-well-known"] }
uuid = { workspace = true, features = ["serde"] }
