[package]
name = "synixe-model"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../../lib/bootstrap" }

arma-rs = { workspace = true, optional = true }
time = { workspace = true, optional = true, features = ["serde-well-known", "macros"] }
regex = { version = "1.7.1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["serde", "v4"] }
serenity = { workspace = true, features = ["utils", "builder"], optional = true }

[features]
default = [
    "garage",
    "gear",
    "missions",
    "reset",
    "roles",
]
campaigns = ["uuid", "serde_json"]
certifications = ["uuid", "roles", "time"]
garage = []
gear = ["time"]
mission-schedule = ["missions", "time", "uuid"]
missions = ["uuid", "time", "regex", "serenity"]
reset = ["uuid"]
roles = ["serenity"]
