[package]
name = "synixe-model"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../../lib/bootstrap" }

arma-rs = { workspace = true, optional = true }
regex = { version = "1.10.3", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serenity = { workspace = true, features = ["utils", "builder"], optional = true }
sqlx = { workspace = true, optional = true }
strip-ansi-escapes = "0.2.0"
time = { workspace = true, optional = true, features = ["serde-well-known", "macros"] }
uuid = { workspace = true, optional = true, features = ["serde", "v4"] }

[features]
default = [
    "garage",
    "gear",
    "missions",
    "roles",
]
campaigns = ["uuid", "serde_json"]
certifications = ["uuid", "roles", "time"]
garage = []
gear = ["time"]
mission-schedule = ["missions", "time", "uuid", "serde_json"]
missions = ["uuid", "time", "regex", "serenity", "serde_json"]
roles = ["serenity"]
