[package]
name = "synixe-gear-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
bootstrap = { path = "../../lib/bootstrap", features = ["sqlx"] }

sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "offline", "time", "uuid", "json"] }
tokio = { workspace = true, features = ["full"] }
